# guess-the-doodle

./: README.md  pyproject.toml
scripts/: testing.ipynb
